Pretty print travel bucket list

--- a/_pages/bucket-list.html
+++ b/_pages/bucket-list.html
@@ -1,63 +1,62 @@
-<h>Travel bucket list</h>
+<h1>Travel bucket list</h1>
 
-Created: June 1, 2019
-Previous: February 21, 2020
-Current: June 13, 2023
+Created: June 1, 2019 <br>
+Previous: February 21, 2020 <br>
+Current: June 13, 2023 <br>
 
-Current#. City [Previous#] [June 2019 #]
-1. Suriname [4][-]
-2. Japan [6] [2]
-3. Australia [-][-]
-4. Cambodia [2][-]
-5. Colombia [3][-]
-6. Saint Kitts and Nevis [3] [10]
-7. Laos [7][-]
-8. Bhutan [8][-]
-9. Russia [9] [-]
-10. Bolivia [10] [-]
-11. Iceland [11] [10]
-12. Nepal [12] [12]
-13. Vatican [13] [13]
-14. San Marino [14] [14]
-15. Malta [15] [15]
-16. Bulgaria [16] [16]
-17. Seychelles [17] [17]
-18. Cyprus [18] [18]
-19. Azerbaijan [19] [-]
-20. Kyrgyzstan [20] [-]
+<b>Current#. City [Previous#] [June 2019 #]</b> <br>
+1. Suriname [4][-] <br>
+2. Japan [6] [2] <br>
+3. Australia [-][-] <br>
+4. Cambodia [2][-] <br>
+5. Colombia [3][-] <br>
+6. Saint Kitts and Nevis [3] [10] <br>
+7. Laos [7][-] <br>
+8. Bhutan [8][-] <br>
+9. Russia [9] [-] <br>
+10. Bolivia [10] [-] <br>
+11. Iceland [11] [10] <br>
+12. Nepal [12] [12] <br>
+13. Vatican [13] [13] <br>
+14. San Marino [14] [14] <br>
+15. Malta [15] [15] <br>
+16. Bulgaria [16] [16] <br>
+17. Seychelles [17] [17] <br>
+18. Cyprus [18] [18] <br>
+19. Azerbaijan [19] [-] <br>
+20. Kyrgyzstan [20] [-] <br>
+ <br>
+<b>Snapshots:</b> <br>
+<a href="https://twitter.com/pradeeban/status/1256375917183631361">01/05/2020</a> <br>
+<a href="https://twitter.com/pradeeban/status/1228892539643682817">15/02/2020</a> <br>
 
-Snapshots:
-<a href="https://twitter.com/pradeeban/status/1256375917183631361">01/05/2020</a>
-<a href="https://twitter.com/pradeeban/status/1228892539643682817">15/02/2020</a>
+I also have an extended bucket list consisting of the following countries/regions, in no specific order: <br>
 
-I also have an extended bucket list consisting of the following countries/regions, in no specific order:
+American Islands: Saint Vincent and the Grenadines, Barbados, Antigua and Barbuda, Dominican Republic, Grenada, Bermuda, Dominica, British Virgin Islands, Montserrat, Pitcairn Islands, Turks and Caicos Islands, Haiti, <br>
 
-American Islands: Saint Vincent and the Grenadines, Barbados, Antigua and Barbuda, Dominican Republic, Grenada, Bermuda, Dominica, British Virgin Islands, Montserrat, Pitcairn Islands, Turks and Caicos Islands, Haiti,
+Europe: North Macedonia, Kosovo, Bosnia and Herzegovina, Akrotiri and Dhekelia,  Montenegro, Moldova, Georgia <br>
 
-Europe: North Macedonia, Kosovo, Bosnia and Herzegovina, Akrotiri and Dhekelia,  Montenegro, Moldova, Georgia
+Asia: Tajikistan,  Uzbekistan, Timor-Leste, Myanmar, Pakistan,  Iran <br>
 
-Asia: Tajikistan,  Uzbekistan, Timor-Leste, Myanmar, Pakistan,  Iran,
+Antarctica and South: South Georgia and South Sandwich Islands, Antarctica, Saint Helena <br>
 
-Antarctica and South: South Georgia and South Sandwich Islands, Antarctica, Saint Helena
+Oceania: New Zealand, Samoa, Micronesia, Vanuatu, Tuvalu, Palau <br>
 
-Oceania: New Zealand, Samoa, Micronesia, Vanuatu, Tuvalu, Palau,
+Africa: Mozambique, Madagascar, Rwanda, Cape Verde, Comoros, Djibouti, Ethiopia, Gabon, Gambia, Guinea-Bissau, Lesotho, Mauritania, Somalia, São Tomé and Príncipe, Togo, Uganda, Zambia, Zimbabwe, Benin, Kenya, Mauritius <br>
 
-Africa: Mozambique, Madagascar, Rwanda, Cape Verde, Comoros, Djibouti, Ethiopia, Gabon, Gambia, Guinea-Bissau, Lesotho, Mauritania, Somalia, São Tomé and Príncipe, Togo, Uganda, Zambia, Zimbabwe, Benin, Kenya, Mauritius,
+Followed by Macau, Hong Kong, Taiwan, French Polynesia, North Korea, Gibraltar, and Greenland. <br>
 
+----------------------------------------------------------------- <br>
 
-Followed by Macau, Hong Kong, Taiwan, French Polynesia, North Korea, Gibraltar, and Greenland.
-
------------------------------------------------------------------
-
-Completed from my top-20 list since 2019:
-1. Panama  (2020 January)
-2. Qatar (2020 February)
-4. Turkey (2019 December)
-4. Latvia (2019 October)
-5. Estonia (2019 October)
-5. Canada (2023 June)
-6. Lithuania (2019 October)
-7. Singapore (2020 February)
-8. Indonesia (2020 February)
-9. Slovakia (2019 August)
-9. Malaysia (2019 November)
+<b>Completed from my top-20 list since 2019: </b><br>
+1. Panama  (2020 January) <br>
+2. Qatar (2020 February) <br>
+4. Turkey (2019 December) <br>
+4. Latvia (2019 October) <br>
+5. Estonia (2019 October) <br>
+5. Canada (2023 June) <br>
+6. Lithuania (2019 October) <br>
+7. Singapore (2020 February) <br>
+8. Indonesia (2020 February) <br>
+9. Slovakia (2019 August) <br>
+9. Malaysia (2019 November) <br>
