--- a/_pages/bucket-list.html
+++ b/_pages/bucket-list.html
@@ -3,7 +3,7 @@
 Created: June 1, 2019 <br>
 Previous: February 21, 2020 <br>
 Current: June 13, 2023 <br>
-
+<br>
 <b>Current#. City [Previous#] [June 2019 #]</b> <br>
 1. Suriname [4][-] <br>
 2. Japan [6] [2] <br>
@@ -29,25 +29,19 @@ Current: June 13, 2023 <br>
 <b>Snapshots:</b> <br>
 <a href="https://twitter.com/pradeeban/status/1256375917183631361">01/05/2020</a> <br>
 <a href="https://twitter.com/pradeeban/status/1228892539643682817">15/02/2020</a> <br>
-
-I also have an extended bucket list consisting of the following countries/regions, in no specific order: <br>
-
-American Islands: Saint Vincent and the Grenadines, Barbados, Antigua and Barbuda, Dominican Republic, Grenada, Bermuda, Dominica, British Virgin Islands, Montserrat, Pitcairn Islands, Turks and Caicos Islands, Haiti, <br>
-
-Europe: North Macedonia, Kosovo, Bosnia and Herzegovina, Akrotiri and Dhekelia,  Montenegro, Moldova, Georgia <br>
-
-Asia: Tajikistan,  Uzbekistan, Timor-Leste, Myanmar, Pakistan,  Iran <br>
-
-Antarctica and South: South Georgia and South Sandwich Islands, Antarctica, Saint Helena <br>
-
-Oceania: New Zealand, Samoa, Micronesia, Vanuatu, Tuvalu, Palau <br>
-
-Africa: Mozambique, Madagascar, Rwanda, Cape Verde, Comoros, Djibouti, Ethiopia, Gabon, Gambia, Guinea-Bissau, Lesotho, Mauritania, Somalia, São Tomé and Príncipe, Togo, Uganda, Zambia, Zimbabwe, Benin, Kenya, Mauritius <br>
-
-Followed by Macau, Hong Kong, Taiwan, French Polynesia, North Korea, Gibraltar, and Greenland. <br>
-
+<br>
+<b>I also have an extended bucket list consisting of the following countries/regions, in no specific order: </b><br>
+<br>
+<b>American Islands:</b> Saint Vincent and the Grenadines, Barbados, Antigua and Barbuda, Dominican Republic, Grenada, Bermuda, Dominica, British Virgin Islands, Montserrat, Pitcairn Islands, Turks and Caicos Islands, Haiti, <br>
+<b>Europe:</b> North Macedonia, Kosovo, Bosnia and Herzegovina, Akrotiri and Dhekelia,  Montenegro, Moldova, Georgia <br>
+<b>Asia:</b> Tajikistan, Uzbekistan, Timor-Leste, Myanmar, Pakistan,  Iran <br>
+<b>Antarctica and South:</b>South Georgia and South Sandwich Islands, Antarctica, Saint Helena <br>
+<b>Oceania:</b>New Zealand, Samoa, Micronesia, Vanuatu, Tuvalu, Palau <br>
+<b>Africa:</b> Mozambique, Madagascar, Rwanda, Cape Verde, Comoros, Djibouti, Ethiopia, Gabon, Gambia, Guinea-Bissau, Lesotho, Mauritania, Somalia, São Tomé and Príncipe, Togo, Uganda, Zambia, Zimbabwe, Benin, Kenya, Mauritius <br>
+<b>Followed by,</b> Macau, Hong Kong, Taiwan, French Polynesia, North Korea, Gibraltar, and Greenland. <br>
+ <br>
 ----------------------------------------------------------------- <br>
-
+ <br>
 <b>Completed from my top-20 list since 2019: </b><br>
 1. Panama  (2020 January) <br>
 2. Qatar (2020 February) <br>
