Attempt to fix page to the template

--- a/_pages/bucket-list.html
+++ b/_pages/bucket-list.html
@@ -1,3 +1,14 @@
+---
+layout: archive
+title: "Personal"
+permalink: /_pages/bucket-list.html/
+author_profile: true
+redirect_from:
+  - /bucket-list
+---
+
+{% include base_path %}
+
 <h1>Travel bucket list</h1>
 
 Created: June 1, 2019 <br>
