--- a/_pages/bucket-list.html
+++ b/_pages/bucket-list.html
@@ -1,6 +1,6 @@
 ---
 layout: archive
-title: "Personal"
+title: "Travel bucket list"
 permalink: /_pages/bucket-list.html/
 author_profile: true
 redirect_from:
@@ -8,8 +8,6 @@ redirect_from:
 ---
 
 {% include base_path %}
-
-<h1>Travel bucket list</h1>
 
 Created: June 1, 2019 <br>
 Previous: February 21, 2020 <br>
