--- a/_pages/bucket-list.html
+++ b/_pages/bucket-list.html
@@ -48,11 +48,11 @@ Current: June 13, 2023 <br>
 <b>I also have an extended bucket list consisting of the following countries/regions, in no specific order: </b><br>
 <br>
 <b>American Islands:</b> Saint Vincent and the Grenadines, Barbados, Antigua and Barbuda, Dominican Republic, Grenada, Bermuda, Dominica, British Virgin Islands, Montserrat, Pitcairn Islands, Turks and Caicos Islands, Haiti, <br>
-<b>Europe:</b> North Macedonia, Kosovo, Bosnia and Herzegovina, Akrotiri and Dhekelia,  Montenegro, Moldova, Georgia <br>
-<b>Asia:</b> Tajikistan, Uzbekistan, Timor-Leste, Myanmar, Pakistan,  Iran <br>
-<b>Antarctica and South:</b>South Georgia and South Sandwich Islands, Antarctica, Saint Helena <br>
-<b>Oceania:</b>New Zealand, Samoa, Micronesia, Vanuatu, Tuvalu, Palau <br>
-<b>Africa:</b> Mozambique, Madagascar, Rwanda, Cape Verde, Comoros, Djibouti, Ethiopia, Gabon, Gambia, Guinea-Bissau, Lesotho, Mauritania, Somalia, São Tomé and Príncipe, Togo, Uganda, Zambia, Zimbabwe, Benin, Kenya, Mauritius <br>
+<b>Europe:</b> North Macedonia, Kosovo, Bosnia and Herzegovina, Akrotiri and Dhekelia,  Montenegro, Moldova, Georgia, <br>
+<b>Asia:</b> Tajikistan, Uzbekistan, Timor-Leste, Myanmar, Pakistan, Iran, <br>
+<b>Antarctica and South:</b>South Georgia and South Sandwich Islands, Antarctica, Saint Helena, <br>
+<b>Oceania:</b>New Zealand, Samoa, Micronesia, Vanuatu, Tuvalu, Palau, <br>
+<b>Africa:</b> Mozambique, Madagascar, Rwanda, Cape Verde, Comoros, Djibouti, Ethiopia, Gabon, Gambia, Guinea-Bissau, Lesotho, Mauritania, Somalia, São Tomé and Príncipe, Togo, Uganda, Zambia, Zimbabwe, Benin, Kenya, Mauritius, <br>
 <b>Followed by,</b> Macau, Hong Kong, Taiwan, French Polynesia, North Korea, Gibraltar, and Greenland. <br>
  <br>
 ----------------------------------------------------------------- <br>
