--- a/_pages/travels.html
+++ b/_pages/travels.html
@@ -1,6 +1,6 @@
 ---
 layout: archive
-title: "Travel bucket list"
+title: "The countries I have visited so far"
 permalink: /_pages/bucket-list.html/
 author_profile: true
 redirect_from:
