--- a/_pages/travels.html
+++ b/_pages/travels.html
@@ -1,7 +1,7 @@
 ---
 layout: archive
-title: "The countries I have visited so far"
-permalink: /_pages/bucket-list.html/
+title: "The countries I have visited"
+permalink: /_pages/travels.html/
 author_profile: true
 redirect_from:
   - /bucket-list
