--- a/_pages/travels.html
+++ b/_pages/travels.html
@@ -11,7 +11,7 @@ redirect_from:
 <div style="text-align: justify;">
     I have been to: <b>Andorra, Austria, Bahamas, Belgium, Canada, China, Croatia, Czech Republic, Denmark, Estonia, Finland, France, Germany, Greece, Hungary, India, Indonesia, Italy, Latvia, Liechtenstein, Lithuania, Luxembourg, Malaysia, Maldives, Mexico, Monaco, Netherlands, Norway, Panama, Poland, Portugal, Qatar, Romania, Saudi Arabia, Serbia, Singapore, Slovakia, Slovenia, South Korea, Spain, Sri Lanka, Sweden, Switzerland, Turkey, United Arab Emirates, United Kingdom, United States. </b>
 <br /><br />
-I have also been to these states in the USA: <b>AL, AK, AZ, CA, CO, FL, GA, LA, MA, MD, MS, NV, NJ, NY, NC, OR, PA, RI, SC, TN, TX, UT, VA, WA, MI, IN, WI, IL, IA, MO, KS, NM, and MN.</b> And also <b>DC</b>.<br /><br />
+I have also been to these states in the USA: <b>AL, AK, AZ, CA, CO, FL, GA, LA, MA, MD, MS, NV, NJ, NY, NC, OR, PA, RI, SC, TN, TX, UT, VA, WA, MI, IN, WI, IL, IA, MO, KS, NM, MN.</b> And also <b>DC</b>.<br /><br />
 
 Given below are my travels. This list includes all the international trips and long local trips, starting with my first international trip to Paris from Colombo in 2010 December. The list also indicates {the number of new countries visited in the year : the total number of countries of the year}.<br />
 
