--- a/_pages/bucket-list.html
+++ b/_pages/bucket-list.html
@@ -9,9 +9,7 @@ redirect_from:
 
 {% include base_path %}
 
-I love random walks in various countries and cities. I like villages and cities in the border.<br>
-I love how the borders change the landscape, life styles, and everything.<br>
-I loved my border crossings by land, the most, including, USA - Mexico,  Croatia - Serbia, Croatia - Slovenia, Romania - Hungary, and many other EU border crossings (that do not really exist thanks to Schengen).<br>
+I enjoy random walks in various countries and cities. I like villages and cities in the border, and how the borders change the landscape, life styles, and everything. I loved my border crossings by land, the most, including, USA - Mexico,  Croatia - Serbia, Croatia - Slovenia, Romania - Hungary, and many other EU border crossings (that do not really exist thanks to Schengen).<br>
 <br>
 In this page, I maintain a list of countries and regions that I like to visit in the future, and those countries that I managed to visit from this bucket list.<br>
 <br>
