--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,8 +5,11 @@ permalink: /teaching/
 author_profile: true
 ---
 
-{% include base_path %}
+I teach these courses at UAA.
 
-{% for post in site.teaching reversed %}
-  {% include archive-single.html %}
-{% endfor %}
+<ul>
+  CSCE A462 - Data Mining
+  CSCE A490 – Distributed Computing
+  CSCE A465 – Computer and Network Security
+  CSCE A365 – Computer Networks
+</ul>
