--- a/_pages/travels.html
+++ b/_pages/travels.html
@@ -198,6 +198,6 @@ I have also been to these states in the USA: <b>AL, AK, AZ, CA, CO, FL, GA, IA, 
 <br />
 <b>[2023] {2:3}</b><br />
 <b>47. Canada (Toronto and Niagara Falls, ON: 8th - 12th June, 2023)&nbsp;</b><br />
-<b>(Vancouver, BC: 19th - 24th May 2024)</b> 
+<b>(Vancouver, BC: 19th - 24th May 2024)</b><br /> 
 <b>48. Jamaica (Montego Bay: 17th - 20th June, 2023)&nbsp;</b><br />
 </div>
