--- a/_pages/bucket-list.html
+++ b/_pages/bucket-list.html
@@ -17,27 +17,27 @@ Created: June 1, 2019 <br>
 Previous: February 21, 2020 <br>
 Current: June 13, 2023 <br>
 <br>
-<b>Current#. City [Previous#] [June 2019 #]</b> <br>
-1. Suriname [4][-] <br>
-2. Japan [6] [2] <br>
-3. Australia [-][-] <br>
-4. Cambodia [2][-] <br>
-5. Colombia [3][-] <br>
-6. Saint Kitts and Nevis [3] [10] <br>
-7. Laos [7][-] <br>
-8. Bhutan [8][-] <br>
-9. Russia [9] [-] <br>
-10. Bolivia [10] [-] <br>
-11. Iceland [11] [10] <br>
-12. Nepal [12] [12] <br>
-13. Vatican [13] [13] <br>
-14. San Marino [14] [14] <br>
-15. Malta [15] [15] <br>
-16. Bulgaria [16] [16] <br>
-17. Seychelles [17] [17] <br>
-18. Cyprus [18] [18] <br>
-19. Azerbaijan [19] [-] <br>
-20. Kyrgyzstan [20] [-] <br>
+<b>#. City</b> <br>
+1. Suriname<br>
+2. Japan<br>
+3. Australia<br>
+4. Cambodia<br>
+5. Colombia<br>
+6. Saint Kitts and Nevis<br>
+7. Laos<br>
+8. Bhutan<br>
+9. Russia<br>
+10. Bolivia<br>
+11. Iceland<br>
+12. Nepal<br>
+13. Vatican<br>
+14. San Marino<br>
+15. Malta<br>
+16. Bulgaria<br>
+17. Seychelles<br>
+18. Cyprus<br>
+19. Azerbaijan<br>
+20. Kyrgyzstan<br>
  <br>
 <b>Snapshots:</b> <br>
 <a href="https://twitter.com/pradeeban/status/1256375917183631361">01/05/2020</a> <br>
