--- a/_pages/bucket-list.html
+++ b/_pages/bucket-list.html
@@ -17,7 +17,7 @@ Created: June 1, 2019 <br>
 Previous: February 21, 2020 <br>
 Current: June 13, 2023 <br>
 <br>
-<b>#. City</b> <br>
+<b>#. Country</b> <br>
 1. Suriname<br>
 2. Japan<br>
 3. Australia<br>
