--- a/_pages/bucket-list.html
+++ b/_pages/bucket-list.html
@@ -18,11 +18,11 @@ Previous: February 21, 2020 <br>
 Current: June 13, 2023 <br>
 <br>
 <b>#. Country</b> <br>
-1. Suriname<br>
-2. Japan<br>
-3. Australia<br>
-4. Cambodia<br>
-5. Colombia<br>
+1. Sierra Leone<br>
+2. Suriname<br>
+3. Japan<br>
+4. Australia<br>
+5. Cambodia<br>
 6. Saint Kitts and Nevis<br>
 7. Laos<br>
 8. Bhutan<br>
@@ -62,6 +62,7 @@ Current: June 13, 2023 <br>
 4. Latvia (2019 October) <br>
 5. Estonia (2019 October) <br>
 5. Canada (2023 June) <br>
+5. Colombia (2024 July) <br>
 6. Lithuania (2019 October) <br>
 7. Singapore (2020 February) <br>
 8. Indonesia (2020 February) <br>
