--- a/_pages/travels.html
+++ b/_pages/travels.html
@@ -9,7 +9,7 @@ redirect_from:
 
 {% include base_path %}
 <div style="text-align: justify;">
-    I have been to: <b>Andorra, Austria, Bahamas, Belgium, Canada, China, Colombia, Croatia, Czech Republic, Denmark, Estonia, Finland, France, Germany, Greece, Hungary, India, Indonesia, Italy, Jamaica, Latvia, Liechtenstein, Lithuania, Luxembourg, Malaysia, Maldives, Mexico, Monaco, Netherlands, Norway, Panama, Poland, Portugal, Qatar, Romania, Saudi Arabia, Serbia, Singapore, Slovakia, Slovenia, South Korea, Spain, Sri Lanka, Sweden, Switzerland, Turkey, United Arab Emirates, United Kingdom, United States. </b>
+    I have been to: <b>Andorra, Australia, Austria, Bahamas, Belgium, Canada, China, Colombia, Croatia, Czech Republic, Denmark, Estonia, Finland, France, Germany, Greece, Hungary, India, Indonesia, Italy, Jamaica, Latvia, Liechtenstein, Lithuania, Luxembourg, Malaysia, Maldives, Mexico, Monaco, Netherlands, Norway, Panama, Poland, Portugal, Qatar, Romania, Saudi Arabia, Serbia, Singapore, Slovakia, Slovenia, South Korea, Spain, Sri Lanka, Sweden, Switzerland, Turkey, United Arab Emirates, United Kingdom, United States. </b>
 <br /><br />
 I have also been to these states in the USA: <b>AL, AK, AZ, CA, CO, FL, GA, HI, IA, IL, IN, KS, LA, MA, MD, MI, MN, MO, MS, NC, NJ, NM, NV, NY, OR, PA, RI, SC, TN, TX, UT, VA, WA, WI.</b> And also <b>DC</b>.<br /><br />
 
@@ -208,4 +208,5 @@ I have also been to these states in the USA: <b>AL, AK, AZ, CA, CO, FL, GA, HI, 
 <br />
 <b>[2024] {2:4}</b><br />
 <b>49. Colombia (Bogota and San Andres: 24th - 28th July, 2024)</b><br />
+<b>50. Australia (Melbourne: 11th - 16th August, 2024)</b><br />
 </div>
