--- a/_pages/travels.html
+++ b/_pages/travels.html
@@ -204,6 +204,7 @@ I have also been to these states in the USA: <b>AL, AK, AZ, CA, CO, FL, GA, HI, 
 <b>[2023] {2:3}</b><br />
 <b>47. Canada (Toronto and Niagara Falls, ON: 8th - 12th June, 2023)&nbsp;</b><br />
 <b>(Vancouver, BC: 19th - 24th May 2024)</b><br /> 
+<b>(Kingston and Toronto, ON: 5th - 9th August, 2024)</b><br />   
 <b>48. Jamaica (Montego Bay: 17th - 20th June, 2023)</b><br />
 <br />
 <b>[2024] {2:4}</b><br />
