--- a/_pages/bucket-list.html
+++ b/_pages/bucket-list.html
@@ -15,13 +15,13 @@ I like to eventually visit all the countries in the world. This page lists the c
 <br>
 Created: June 1, 2019 <br>
 Previous: February 21, 2020 <br>
-Current: June 13, 2023 <br>
+Current: August 12, 2024 <br>
 <br>
 <b>#. Country</b> <br>
 1. Sierra Leone<br>
-2. Suriname<br>
-3. Japan<br>
-4. Australia<br>
+2. Kenya <br>
+3. Suriname<br>
+4. Japan<br>
 5. Cambodia<br>
 6. Saint Kitts and Nevis<br>
 7. Laos<br>
@@ -51,7 +51,7 @@ Current: June 13, 2023 <br>
 <b>Antarctica and South:</b> South Georgia and South Sandwich Islands, Antarctica, Saint Helena, <br>
 <b>Oceania:</b> New Zealand, Samoa, Micronesia, Vanuatu, Tuvalu, Palau, <br>
 <b>Africa:</b> Mozambique, Madagascar, Rwanda, Cape Verde, Comoros, Djibouti, Ethiopia, Gabon, Gambia, Guinea-Bissau, Lesotho, Mauritania, Somalia, São Tomé and Príncipe, Togo, Uganda, Zambia, Zimbabwe, Benin, Kenya, Mauritius, <br>
-<b>Followed by,</b> Macau, Hong Kong, Taiwan, French Polynesia, North Korea, Gibraltar, and Greenland. <br>
+<b>Followed by </b> Macau, Hong Kong, Taiwan, French Polynesia, North Korea, Gibraltar, and Greenland. <br>
  <br>
 ----------------------------------------------------------------- <br>
  <br>
@@ -60,6 +60,7 @@ Current: June 13, 2023 <br>
 2. Qatar (2020 February) <br>
 4. Turkey (2019 December) <br>
 4. Latvia (2019 October) <br>
+4. Australia (2024 August) <br>
 5. Estonia (2019 October) <br>
 5. Canada (2023 June) <br>
 5. Colombia (2024 July) <br>
