--- a/_pages/bucket-list.html
+++ b/_pages/bucket-list.html
@@ -50,7 +50,7 @@ Current: August 12, 2024 <br>
 <b>Asia:</b> Tajikistan, Uzbekistan, Timor-Leste, Myanmar, Pakistan, Iran, <br>
 <b>Antarctica and South:</b> South Georgia and South Sandwich Islands, Antarctica, Saint Helena, <br>
 <b>Oceania:</b> New Zealand, Samoa, Micronesia, Vanuatu, Tuvalu, Palau, <br>
-<b>Africa:</b> Mozambique, Madagascar, Rwanda, Cape Verde, Comoros, Djibouti, Ethiopia, Gabon, Gambia, Guinea-Bissau, Lesotho, Mauritania, Somalia, São Tomé and Príncipe, Togo, Uganda, Zambia, Zimbabwe, Benin, Kenya, Mauritius, <br>
+<b>Africa:</b> Mozambique, Madagascar, Rwanda, Cape Verde, Comoros, Djibouti, Ethiopia, Gabon, Gambia, Guinea-Bissau, Lesotho, Mauritania, Somalia, São Tomé and Príncipe, Togo, Uganda, Zambia, Zimbabwe, Benin, Mauritius, <br>
 <b>Followed by </b> Macau, Hong Kong, Taiwan, French Polynesia, North Korea, Gibraltar, and Greenland. <br>
  <br>
 ----------------------------------------------------------------- <br>
