--- a/_pages/bucket-list.html
+++ b/_pages/bucket-list.html
@@ -45,13 +45,13 @@ Current: August 12, 2024 <br>
 <br>
 <b>I also have an extended bucket list consisting of the following countries/regions, in no specific order: </b><br>
 <br>
-<b>American Islands:</b> Saint Vincent and the Grenadines, Barbados, Antigua and Barbuda, Dominican Republic, Grenada, Bermuda, Dominica, British Virgin Islands, Montserrat, Pitcairn Islands, Turks and Caicos Islands, Haiti, <br>
-<b>Europe:</b> North Macedonia, Kosovo, Bosnia and Herzegovina, Akrotiri and Dhekelia,  Montenegro, Moldova, Georgia, <br>
-<b>Asia:</b> Tajikistan, Uzbekistan, Timor-Leste, Myanmar, Pakistan, Iran, <br>
-<b>Antarctica and South:</b> South Georgia and South Sandwich Islands, Antarctica, Saint Helena, <br>
+<b>American Islands:</b> Saint Vincent and the Grenadines, Antigua and Barbuda, Dominican Republic, Grenada, Dominica, Haiti, <br>
+<b>Europe:</b> North Macedonia, Kosovo, Bosnia and Herzegovina, Montenegro, Moldova, Georgia, <br>
+<b>Asia:</b> Tajikistan, Uzbekistan, Timor-Leste, Myanmar, Pakistan, Syria, Iran, North Korea, <br>
+<b>Antarctica and South:</b> South Georgia and South Sandwich Islands, Antarctica, <br>
 <b>Oceania:</b> New Zealand, Samoa, Micronesia, Vanuatu, Tuvalu, Palau, <br>
-<b>Africa:</b> Mozambique, Madagascar, Rwanda, Cape Verde, Comoros, Djibouti, Ethiopia, Gabon, Gambia, Guinea-Bissau, Lesotho, Mauritania, Somalia, São Tomé and Príncipe, Togo, Uganda, Zambia, Zimbabwe, Benin, Mauritius, <br>
-<b>Followed by </b> Macau, Hong Kong, Taiwan, French Polynesia, North Korea, Gibraltar, and Greenland. <br>
+<b>Africa:</b> Mozambique, Madagascar, Cape Verde, Comoros, Djibouti, Ethiopia, Gabon, Gambia, Guinea-Bissau, Lesotho, Mauritania, Somalia, São Tomé and Príncipe, Togo, Uganda, Zambia, Zimbabwe, Benin, Mauritius, <br>
+<b>Followed by </b> Macau, Hong Kong, Taiwan, and Greenland. <br>
  <br>
 ----------------------------------------------------------------- <br>
  <br>
