--- a/_pages/travels.html
+++ b/_pages/travels.html
@@ -212,12 +212,13 @@ I have also been to these states in the USA: <b>AL, AK, AZ, CA, CO, FL, GA, HI, 
 <b>(Vancouver, BC: 19th - 24th May 2024)</b><br /> 
 <b>(Kingston and Toronto, ON: 5th - 9th August, 2024)</b><br />   
 <b>(Toronto, ON: 18th - 19th August, 2024)</b><br />   
+<b>(Vancouver, BC: 25th - 29th May, 2025)</b><br />   
 <b>48. Jamaica (Montego Bay: 17th - 20th June, 2023)</b><br />
 <br />
 <b>[2024] {2:6}</b><br />
 <b>49. Colombia (Bogota and San Andres: 24th - 28th July, 2024)</b><br />
 <b>50. Australia (Melbourne: 11th - 17th August, 2024)</b><br />
   <br />
-  <b>[2025] {1:3}</b><br />
+  <b>[2025] {1:4}</b><br />
 <b>51. Rwanda (Kigali: 14th - 19th May, 2025)</b><br />
 </div>
