Add travel dates for Northfield and Minneapolis, MN

--- a/_pages/travels.html
+++ b/_pages/travels.html
@@ -101,6 +101,8 @@ I have also been to these states in the USA: <b>AL, AK, AZ, CA, CO, FL, GA, HI, 
 <div style="text-align: justify;"><b>(San Antonio, TX: 9th - 14th June, 2025)</b></div>
 <div style="text-align: justify;"><b>(New York City, NY: 2nd - 5th July, 2025)</b></div>
 <div style="text-align: justify;"><b>(New York City, NY: 10th - 11th July, 2025)</b></div>
+<div style="text-align: justify;"><b>(Northfield and Minneapolis, MN: 26th - 29th October, 2025)</b></div>
+
 <br />
 <hr style="border-bottom: 2px solid black;">
 
