Add horizontal rule to travels page

--- a/_pages/travels.html
+++ b/_pages/travels.html
@@ -339,6 +339,7 @@ I have also been to these states in the USA: <b>AL, AK, AZ, CA, CO, FL, GA, HI, 
 <b>52. Barbados (Christ Church, Bridgetown, and Harrison's Cave: 5th - 10th July, 2025)</b><br />
   <b>53. Thailand (Bangkok: 27th December 2025 - 8th January 2026)</b><br />
     <br />
+  <hr style="border-bottom: 2px solid black;">
 
     <b>[2026] {0:2}</b><br />
 
