Add travel dates for Los Angeles and Santa Monica

--- a/_pages/travels.html
+++ b/_pages/travels.html
@@ -107,6 +107,7 @@ I have also been to these states in the USA: <b>AL, AK, AZ, CA, CO, FL, GA, HI, 
 <div style="text-align: justify;"><b>(Juneau, AK: 17th December 2025)</b></div>
 <div style="text-align: justify;"><b>(Tacoma and Seattle, WA: 17th - 25th December, 2025)</b></div>
 <div style="text-align: justify;"><b>(Los Angeles, CA: 12th - 13th January, 2026)</b></div>
+<div style="text-align: justify;"><b>(Los Angeles and Santa Monica, CA: 13th - 14th February, 2026)</b></div>
 
 <br />
 <hr style="border-bottom: 2px solid black;">
